--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "nan": "^2.11.1"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
     "co": "^4.6.0",
     "eslint": "^5.9.0",
-    "eslint-config-rocketmq-style": "^1.0.0"
+    "eslint-config-rocketmq-style": "^1.0.0",
+    "mocha": "^5.2.0"
   }
 }
